--- a/src/main/resources/static/css/chat-room.css
+++ b/src/main/resources/static/css/chat-room.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #80bb6c;
+    background-color: #f9f4ef;
     display: -webkit-flex; /* Safari */
     display: flex;
     flex-direction: column;
